stopping some odd horizontal scroll issues relating to coments
Former-commit-id: 7fcafe2435cdc42b09e046df16e304d38398bcb7
Former-commit-id: fc1a8c6dbb4cafa2bc648a22fd6fb8b3d71cd57a
Former-commit-id: d867e218ebfaec8785d157efab9185420bcf2e82
Former-commit-id: 3637c92fbf5ec21148a2d85b78ab201ffa1cd966
Former-commit-id: d5e9644eb63471a858e77a48252591e2b1c0a420
Former-commit-id: 4d8ea47fc8856694161787d72459d2b1bd81d926

--- a/podiobooks/themes/pb2-jq/css/title_detail.css
+++ b/podiobooks/themes/pb2-jq/css/title_detail.css
@@ -38,6 +38,10 @@
 
 }
 
+.title-footer{
+	overflow:none;
+}
+
 .title-license a,
 .title-license a:visited,
 .title-license a:hover,
